--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 SECRET_KEY = django-insecure-99_vg)7%6-rn%*3s#1tjwx%h3*8e8ke#t@#sy!%%#1p%*mj%0z
-DATABASE_URL= 
+DATABASE_URL= postgresql://frapp_user:EsF7JrmmuHwQNts0nPiHUF6JaCxoyxVP@dpg-d4odlhngi27c738dr12g-a.frankfurt-postgres.render.com/frapp
 DEBUG = 
 ALLOWED_HOSTS = 
 CORS_ALLOWED_ORIGINS = 
