--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,9 @@ DATABASE_URL= postgresql://frapp_user:EsF7JrmmuHwQNts0nPiHUF6JaCxoyxVP@dpg-d4odl
 DEBUG = 
 ALLOWED_HOSTS = 
 CORS_ALLOWED_ORIGINS = 
+EMAIL_BACKEND = django.core.mail.backends.smtp.EmailBackend
+EMAIL_HOST = smtp.gmail.com
+EMAIL_PORT = 587
+EMAIL_USE_TLS = True
+EMAIL_HOST_USER = frinnovagenbj@gmail.com
+EMAIL_HOST_PASSWORD = lxho xvtz qkfn urhd
