--- a/fr_frontend/package.json
+++ b/fr_frontend/package.json
@@ -13,7 +13,7 @@
     "form-data": "^4.0.5",
     "lucide-react": "^0.548.0",
     "mailgun.js": "^12.2.0",
-    "next": "15.5.6",
+    "next": "^15.5.7",
     "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
