--- a/fr_frontend/package.json
+++ b/fr_frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@vercel/speed-insights": "^1.3.1",
     "axios": "^1.12.2",
     "form-data": "^4.0.5",
     "lucide-react": "^0.548.0",
