--- a/backend/.env
+++ b/backend/.env
@@ -1,11 +1,11 @@
 SECRET_KEY = django-insecure-99_vg)7%6-rn%*3s#1tjwx%h3*8e8ke#t@#sy!%%#1p%*mj%0z
 DATABASE_URL= postgresql://frapp_user:EsF7JrmmuHwQNts0nPiHUF6JaCxoyxVP@dpg-d4odlhngi27c738dr12g-a.frankfurt-postgres.render.com/frapp
-DEBUG = 
+DEBUG = False
 ALLOWED_HOSTS = 
-CORS_ALLOWED_ORIGINS = 
+CORS_ALLOWED_ORIGINS = https://faciale-recognition-app.vercel.app/
 EMAIL_BACKEND = django.core.mail.backends.smtp.EmailBackend
 EMAIL_HOST = smtp.gmail.com
 EMAIL_PORT = 587
 EMAIL_USE_TLS = True
-EMAIL_HOST_USER = frinnovagenbj@gmail.com
-EMAIL_HOST_PASSWORD = lxho xvtz qkfn urhd
+EMAIL_HOST_USER = frinnovagen56bj@gmail.com
+EMAIL_HOST_PASSWORD = zamm dpfi aumt zykz
